editor/test/resources/errors_project/errors/window_using_panel_break_button.gui
script: ""
background_color {
  x: 0.0
  y: 0.0
  z: 0.0
  w: 0.0
}
nodes {
  position {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  rotation {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  scale {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  size {
    x: 200.0
    y: 100.0
    z: 0.0
    w: 1.0
  }
  color {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  type: TYPE_TEMPLATE
  id: "panel"
  layer: ""
  inherit_alpha: true
  alpha: 1.0
  template: "/errors/panel_break_button.gui"
  template_node_child: false
}
nodes {
  position {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  rotation {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  scale {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  size {
    x: 200.0
    y: 100.0
    z: 0.0
    w: 1.0
  }
  color {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  type: TYPE_TEMPLATE
  id: "panel/button"
  parent: "panel"
  layer: ""
  inherit_alpha: true
  alpha: 1.0
  template: "/errors/button.gui"
  template_node_child: true
}
nodes {
  position {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  rotation {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 1.0
  }
  scale {
    x: 1.0
    y: 1.0
    z: 1.0
    w: 1.0
  }
  size {
    x: 100.0
    y: 50.0
    z: 0.0
    w: 1.0
  }
  color {
    x: 0.4
    y: 0.6
    z: 0.6
    w: 1.0
  }
  type: TYPE_BOX
  blend_mode: BLEND_MODE_ALPHA
  texture: "missing_texture/logo"
  id: "panel/button/box"
  xanchor: XANCHOR_NONE
  yanchor: YANCHOR_NONE
  pivot: PIVOT_CENTER
  adjust_mode: ADJUST_MODE_FIT
  parent: "panel/button"
  layer: ""
  inherit_alpha: true
  slice9 {
    x: 0.0
    y: 0.0
    z: 0.0
    w: 0.0
  }
  clipping_mode: CLIPPING_MODE_NONE
  clipping_visible: true
  clipping_inverted: false
  alpha: 1.0
  template_node_child: true
  size_mode: SIZE_MODE_MANUAL
}
material: "/builtins/materials/gui.material"
adjust_reference: ADJUST_REFERENCE_LEGACY
max_nodes: 512
